tests/build/cases/widget/error_first_token.stderr
error: expected property or when
 --> cases/widget/error_first_token.rs:8:9
  |
8 |         =
  |         ^

error: expected property path
  --> cases/widget/error_first_token.rs:13:13
   |
13 |             =
   |             ^

error: missing `fn build(WidgetBuilder) -> T` function, must be provided or inherited
 --> cases/widget/error_first_token.rs:4:9
  |
4 | pub mod test {
  |         ^^^^
